--- a/css/main.css
+++ b/css/main.css
@@ -21,4 +21,11 @@ h2 {
   font-color:#cc919a;
 }
   
+@media (prefers-reduced-motion: no-preference) {
+  
+  html {
+    scroll-behavior: smooth;
+  }
+
+}
   
