--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,18 @@ h2 {
 
 }
   
+}
+a:link {
+  color: #342211;
+  text-decoration: none;
+  font-size: 1em; 
+}
+a:visited {
+  color: #342211;
+}
+a:hover {
+  background-color: #d2b48c;
+}
+a:active {
+  color: #342211;
+}
