--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,35 @@ h2 {
   }
 
 }
-  
+ ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #FFCCE5;
+}
+
+ul.topnav li {float: left;}
+
+ul.topnav li a {
+  display: block;
+  color: #000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {background-color: #e6e6fa;}
+
+ul.topnav li a.active {background-color: #e6e6fa;}
+
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 600px) {
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
+} 
+
 }
 a:link {
   color: #342211;
