--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ img {
 .figure summary img {
   visibility: visible;
   margin-top: -1rem;
+  margin-bottom: -1rem;
 }
   
 @media (prefers-reduced-motion: no-preference) {
