--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ html {
 
 body {
   font-size: 90%;
-  background-color: ##E6E6FA;
+  background-color: #E6E6FA;
   max-width: 48em;
   padding: 0 1rem;
   margin: 1rem auto;
