--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
 h1 {
   font-size: 2em;
   text-align: center;
-  font-family: 'Girassol', cursive;
+  font-family: 'Qwigley', cursive;
 }
 
 h2 {
