--- a/css/main.css
+++ b/css/main.css
@@ -57,10 +57,9 @@ img {
   padding: 0;
   overflow: hidden;
   background-color: #E0FFFF;
-  justify-content: center;
 }
 
-ul.topnav li {float: left;}
+ul.topnav li {float: center;}
 
 ul.topnav li a {
   display: block;
