--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ img {
   background-color: #E0FFFF;
 }
 
-ul.topnav li {float: center;}
+ul.topnav li {float: middle;}
 
 ul.topnav li a {
   display: block;
